# dbus-battery-bank

./: .gitignore  CLAUDE.md  COMMISSIONING.md  README.md  config.example.ini  custom-gui-install.sh  enable.sh  install.sh  pyproject.toml  revert.sh
battery_bank/: config.py  main.py
battery_bank/acquisition/: availability.py  battery_poller.py  shunt_poller.py  snapshots.py  workers.py
battery_bank/core/: bank.py  charge_stage.py  current_limits.py  history.py  interpolation.py  kalman.py  protections.py  stats.py  values.py
battery_bank/persistence/: state_file.py
battery_bank/publishing/: dbus_services.py  diagnostics_text.py  service_values.py
battery_bank/transport/: serial_link.py  up16s.py  up16s_raw_window.py  vedirect.py
docs/: up16s-raw-window.md
qml/gui-v2/: LICENSE.txt
qml/gui-v2/3.6x/: PageBattery.qml  PageBatteryBankDebug.qml  PageBatteryCellVoltages.qml  PageBatteryTimeToSoc.qml
qml/gui-v2/3.7x/: PageBattery.qml  PageBatteryBankDebug.qml  PageBatteryCellVoltages.qml  PageBatteryDbusSerialbatterySettings.qml  PageBatteryDetails.qml  (+2 more)
scripts/: README.md  build-wasm-container.sh  build-wasm-docker.sh  build-wasm-macos.sh  deploy.sh  patch-gui-v2-fork.py
service/: run
service/log/: run
tests/: factories.py  test_acquisition.py  test_bank.py  test_charge_stage.py  test_config.py  test_current_limits.py  test_diagnostics_text.py  test_history.py  test_interpolation.py  test_pollers.py  test_protections.py  test_service_values.py  test_state_file.py  test_up16s.py  test_up16s_raw_window.py  test_vedirect.py  test_workers.py
